chore: more edns flags

--- a/infrastructure/dns/external-dns.yaml
+++ b/infrastructure/dns/external-dns.yaml
@@ -29,9 +29,10 @@ spec:
     sources: 
       - ingress
     policy: sync
+    interval: 60m
+    triggerLoopOnEvent: true
     extraArgs:
       - --annotation-filter=external-dns.alpha.kubernetes.io/exclude notin (true)
-
     env:
       - name: CF_API_TOKEN
         valueFrom:
