--- a/apps/actual/actual-shared/helmrelease.yaml
+++ b/apps/actual/actual-shared/helmrelease.yaml
@@ -53,6 +53,7 @@ spec:
         annotations:
           kubernetes.io/ingress.class: nginx-internal
           cert-manager.io/cluster-issuer: letsencrypt-prod
+          nginx.ingress.kubernetes.io/proxy-body-size: "0"
         hosts:
           - host: &hostName actual.bo0tzz.me
             paths:
