--- a/apps/dawarich/dawarich.yaml
+++ b/apps/dawarich/dawarich.yaml
@@ -31,8 +31,8 @@ spec:
         containers:
           app: &bapp
             image:
-              repository: freikin/dawarich
-              tag: 0.23.5
+              repository: ghcr.io/bo0tzz/dawarich
+              tag: main@sha256:c8b581b7eb335f5cd22a6a478df083bfba9440d397be917ad80148de17ea1417
             env:
               REDIS_URL: redis://dawarich-valkey.dawarich.svc.cluster.local:6379
               APPLICATION_HOSTS: "dawarich.bo0tzz.me"
