fix: dawarich tls

--- a/apps/dawarich/dawarich.yaml
+++ b/apps/dawarich/dawarich.yaml
@@ -90,9 +90,13 @@ spec:
           kubernetes.io/ingress.class: nginx-internal
           cert-manager.io/cluster-issuer: letsencrypt-prod
         hosts:
-          - host: dawarich.bo0tzz.me
+          - host: &hostname dawarich.bo0tzz.me
             paths:
               - path: /
                 service:
                   identifier: app
                   port: http
+        tls:
+          - hosts:
+              - *hostname
+            secretName: dawarich-tls
