--- a/apps/dawarich/dawarkitty-secret.yaml
+++ b/apps/dawarich/dawarkitty-secret.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
     name: dawarkitty-secret
+    namespace: dawarich
 stringData:
     DAWARICH_HOST: ENC[AES256_GCM,data:zH3TTfarsDA0,iv:QBMvmJhHag6nny2BbefOjl5qzbcfrWYawddmYgwIOc8=,tag:C1xF+zDFSRQkvhA1fZarZw==,type:str]
     DAWARICH_API_KEY: ENC[AES256_GCM,data:C8c1f3MkPSDOVreOi7L27MgyFUirGnb356klN3LlFgg=,iv:5aIX1i3eumCmIoZ8UijLRnTfhxxCbOSAA7A8y1eOLYo=,tag:f1mCATYlA3qrgvmYAKvYtw==,type:str]
