--- a/apps/dawarich/dawarkitty-secret.yaml
+++ b/apps/dawarich/dawarkitty-secret.yaml
@@ -4,7 +4,7 @@ metadata:
     name: dawarkitty-secret
     namespace: dawarich
 stringData:
-    DAWARICH_HOST: ENC[AES256_GCM,data:zH3TTfarsDA0,iv:QBMvmJhHag6nny2BbefOjl5qzbcfrWYawddmYgwIOc8=,tag:C1xF+zDFSRQkvhA1fZarZw==,type:str]
+    DAWARICH_HOST: ENC[AES256_GCM,data:mU2b3QhhXllqOS4oE1f1Jpy4cq0V,iv:jdV4fwy7sKDkA844Y2hoXrBRHe5HnwhUuDarhFzTk48=,tag:JYCIQaG5jCclkCtWVS5L3Q==,type:str]
     DAWARICH_API_KEY: ENC[AES256_GCM,data:C8c1f3MkPSDOVreOi7L27MgyFUirGnb356klN3LlFgg=,iv:5aIX1i3eumCmIoZ8UijLRnTfhxxCbOSAA7A8y1eOLYo=,tag:f1mCATYlA3qrgvmYAKvYtw==,type:str]
     TRACTIVE_EMAIL: ENC[AES256_GCM,data:YMAC1sOIM0DHRdDYGzmgAw9vq7ESfw==,iv:yGFU5uFgNY7bpDYbApeBZMY0QAUl+65sxRAw8TxoL3M=,tag:5VgZD0GBo1d5F2JPmFuA8Q==,type:str]
     TRACTIVE_PASSWORD: ENC[AES256_GCM,data:hl5L5SHoa57orYnIBMmMB87ZWyH21JNJk/M4W6xKj1MpcRX93YY9fg==,iv:nIgrFWSBD7prDWoTjA0Pw6UZMw4kTZ4T9xiS88OcPyQ=,tag:0GsX5WyB/wjlKJyGczmwDA==,type:str]
@@ -14,8 +14,8 @@ sops:
     azure_kv: []
     hc_vault: []
     age: []
-    lastmodified: "2025-01-28T17:34:16Z"
-    mac: ENC[AES256_GCM,data:AyjcInPw3P7WMmPWf/3Q9j8ScrOMBFf1zqhh9WuUQvdGkTeVY7CawBeLpzIs5jQrtE1bewOAkaJLOxWO3cTyo8NkqgX6+1+33vCK8l6VN+noWL1x8FSgOAzuFkSQ2+TZzdBrzcGuxxjAx2y4K23BhsrDgCPfmnHEoUla5EbiIJc=,iv:uH2sq0u3D26azoFvkeTbaBdAb6Bzyldbj3ukTZ7Ij5g=,tag:zA05YS85Jzud8ydHMBtjSw==,type:str]
+    lastmodified: "2025-01-28T19:03:30Z"
+    mac: ENC[AES256_GCM,data:PwmuDF3XtjOGIL5PjuSxym8tTu5d9h4ngUC76yQaTODEVcfAyoulc0xZdZaZEBLWkduob+oLwwSVKt0oI0J/gZxwEAIMn3d2Br57Ah9jyewnnkct2m81ND8C8+9Rvfk74KP4ic7+8tLjonNtx2A9jGcNqVMqr9Hiq/sNmUn7MYE=,iv:7OMa/r0nGyvw+xYH4XXL6i+RnZNHGXTLxTik1vsaWsg=,tag:CzQH9tsiv96ZKjqciM5ELw==,type:str]
     pgp:
         - created_at: "2025-01-28T17:34:16Z"
           enc: |-
