fix: deployment strategy

--- a/apps/angel-backups.yaml
+++ b/apps/angel-backups.yaml
@@ -38,6 +38,8 @@ metadata:
   name: angel-backups
   namespace: applications
 spec:
+  strategy:
+    type: Recreate
   selector:
     matchLabels:
       app: angel-backups
