--- a/apps/stirling-pdf.yaml
+++ b/apps/stirling-pdf.yaml
@@ -48,6 +48,7 @@ spec:
         annotations:
           kubernetes.io/ingress.class: nginx-internal
           cert-manager.io/cluster-issuer: letsencrypt-prod
+          nginx.ingress.kubernetes.io/proxy-body-size: "500m"
         hosts:
           - host: &host "pdf.bo0tzz.me"
             paths:
