--- a/apps/minecraft.yaml
+++ b/apps/minecraft.yaml
@@ -25,7 +25,7 @@ spec:
         memory: 4G
     minecraftServer:
       eula: "TRUE"
-      version: "1.21.1"
+      version: "1.21.4"
       whitelist: Dylan_rengers,bo0tzz
       ops: Dylan_rengers,bo0tzz
       maxWorldSize: 29999984
@@ -36,6 +36,9 @@ spec:
       loadBalancerIP: 192.168.4.103
       rcon:
         enabled: true
+      type: "FABRIC"
+      modrinth:
+        projects: ["worldedit"]
     persistence:
       dataDir:
         enabled: true
