--- a/infrastructure/system/generic-device-plugin/hr.yaml
+++ b/infrastructure/system/generic-device-plugin/hr.yaml
@@ -13,7 +13,7 @@ spec:
       sourceRef:
         kind: HelmRepository
         name: bjw-s-charts
-        namespace:
+        namespace: system
   values:
     controllers:
       generic-device-plugin:
