fix: cfgmap name

--- a/infrastructure/system/generic-device-plugin/kustomization.yaml
+++ b/infrastructure/system/generic-device-plugin/kustomization.yaml
@@ -3,7 +3,7 @@ kind: Kustomization
 resources:
   - ./hr.yaml
 configMapGenerator:
-  - name: generic-device-plugin-configmap
+  - name: generic-device-plugin
     namespace: system
     files:
       - ./config.yaml
