fix: terminationMessagePath conflict

--- a/infrastructure/system/generic-device-plugin/hr.yaml
+++ b/infrastructure/system/generic-device-plugin/hr.yaml
@@ -32,6 +32,8 @@ spec:
                 cpu: 10m
               limits:
                 memory: 64Mi
+            # Apparently necessary to avoid some conflict in /dev?
+            terminationMessagePath: /tmp/term
             securityContext:
               allowPrivilegeEscalation: false
               readOnlyRootFilesystem: true
