--- a/infrastructure/system/generic-device-plugin/config.yaml
+++ b/infrastructure/system/generic-device-plugin/config.yaml
@@ -4,5 +4,5 @@ devices:
     groups:
       - count: 1
         usb:
-          - vendor: 0bda
-            product: 2838
+          - vendor: "0bda"
+            product: "2838"
