--- a/apps/radio/acars.yaml
+++ b/apps/radio/acars.yaml
@@ -152,8 +152,9 @@ spec:
     ingress:
       acarshub:
         annotations:
-          kubernetes.io/ingress.class: nginx-internal
+          kubernetes.io/ingress.class: nginx
           cert-manager.io/cluster-issuer: letsencrypt-prod
+          external-dns.alpha.kubernetes.io/target: bo0tzz.me
         hosts:
           - host: &host "acars.bo0tzz.me"
             paths:
