chore(deps): update helm release minecraft to v4.25.0 (#1572)
* chore(deps): update helm release minecraft to v4.25.0

* override lol

---------

Co-authored-by: renovate[bot] <29139614+renovate[bot]@users.noreply.github.com>

--- a/apps/minecraft.yaml
+++ b/apps/minecraft.yaml
@@ -8,13 +8,14 @@ spec:
   chart:
     spec:
       chart: minecraft
-      version: '4.24.0'
+      version: '4.25.0'
       sourceRef:
         kind: HelmRepository
         name: minecraft
         namespace: applications
       interval: 1h
   values:
+    fullnameOverride: minecraft-minecraft
     image:
       pullPolicy: Always
     resources:
