fix: edns target

--- a/apps/social/gotosocial.yaml
+++ b/apps/social/gotosocial.yaml
@@ -80,6 +80,7 @@ spec:
         annotations:
           kubernetes.io/ingress.class: nginx
           cert-manager.io/cluster-issuer: letsencrypt-prod
+          external-dns.alpha.kubernetes.io/target: bo0tzz.me
         hosts:
           - host: bo0.tz
             paths:
