--- a/apps/social/helm-repository.yaml
+++ b/apps/social/helm-repository.yaml
@@ -5,4 +5,4 @@ metadata:
   namespace: social
 spec:
   interval: 1h
-  url: https://bjw-s.github.io/helm-charts/
+  url: https://bjw-s-labs.github.io/helm-charts/
