--- a/infrastructure/monitoring/repo.yaml
+++ b/infrastructure/monitoring/repo.yaml
@@ -14,4 +14,4 @@ metadata:
   namespace: monitoring
 spec:
   interval: 1h
-  url: https://bjw-s.github.io/helm-charts/
+  url: https://bjw-s-labs.github.io/helm-charts/
