--- a/media/bjw-s-repo.yaml
+++ b/media/bjw-s-repo.yaml
@@ -5,4 +5,4 @@ metadata:
   namespace: media
 spec:
   interval: 1h
-  url: https://bjw-s.github.io/helm-charts/
+  url: https://bjw-s-labs.github.io/helm-charts/
