--- a/database/app-db.yaml
+++ b/database/app-db.yaml
@@ -5,13 +5,13 @@ metadata:
   namespace: database
 spec:
   instances: 3
-  imageName: ghcr.io/tensorchord/cloudnative-pgvecto.rs:14.11-v0.2.1
+  imageName: ghcr.io/tensorchord/cloudnative-vectorchord:14.18-0.3.0
   enableSuperuserAccess: true
   primaryUpdateMethod: switchover
 
   postgresql:
     shared_preload_libraries:
-      - "vectors.so"
+      - "vchord.so"
 
   storage:
     storageClass: local-path
