--- a/infrastructure/dns/cert-manager.yaml
+++ b/infrastructure/dns/cert-manager.yaml
@@ -25,3 +25,8 @@ spec:
       interval: 1h
   values:
     installCRDs: true
+    config:
+      featureGates:
+        # Disable the use of Exact PathType in Ingress resources, to work around a bug in ingress-nginx
+        # https://github.com/kubernetes/ingress-nginx/issues/11176
+        ACMEHTTP01IngressPathTypeExact: false
