fix: explicitly disable pingvin inituser

--- a/apps/pingvin-share/config.yaml
+++ b/apps/pingvin-share/config.yaml
@@ -20,3 +20,6 @@ data:
       oidc-clientId: "${PINGVIN_OIDC_CLIENT_ID}"
       oidc-clientSecret: "${PINGVIN_OIDC_CLIENT_SECRET}"
       disablePassword: "true"
+    
+    initUser:
+      enabled: "false"
