--- a/apps/pingvin-share/config.yaml
+++ b/apps/pingvin-share/config.yaml
@@ -7,19 +7,19 @@ metadata:
 data:
   config.yaml: |
     general:
-      appUrl: https://share.zijlein.de
-      secureCookies: "true"
+      appUrl: "https://share.zijlein.de"
+      secureCookies: true
     
     share:
-      allowRegistration: "false"
-      maxExpiration: 30 days
+      allowRegistration: false
+      maxExpiration: "30 days"
     
     oauth:
-      oidc-enabled: "true"
+      oidc-enabled: true
       oidc-discoveryUri: "https://auth.bo0tzz.me/application/o/pingvin/.well-known/openid-configuration"
-      oidc-clientId: "${PINGVIN_OIDC_CLIENT_ID}"
-      oidc-clientSecret: "${PINGVIN_OIDC_CLIENT_SECRET}"
-      disablePassword: "true"
+      oidc-clientId: "\${PINGVIN_OIDC_CLIENT_ID}"
+      oidc-clientSecret: "\${PINGVIN_OIDC_CLIENT_SECRET}"
+      disablePassword: true
     
     initUser:
-      enabled: "false"
+      enabled: false
