--- a/apps/pingvin-share/config.yaml
+++ b/apps/pingvin-share/config.yaml
@@ -17,8 +17,8 @@ data:
     oauth:
       oidc-enabled: true
       oidc-discoveryUri: "https://auth.bo0tzz.me/application/o/pingvin/.well-known/openid-configuration"
-      oidc-clientId: "\${PINGVIN_OIDC_CLIENT_ID}"
-      oidc-clientSecret: "\${PINGVIN_OIDC_CLIENT_SECRET}"
+      oidc-clientId: "$${PINGVIN_OIDC_CLIENT_ID}"
+      oidc-clientSecret: "$${PINGVIN_OIDC_CLIENT_SECRET}"
       disablePassword: true
     
     initUser:
