--- a/apps/dawarich/dawarkitty.yaml
+++ b/apps/dawarich/dawarkitty.yaml
@@ -46,10 +46,7 @@ spec:
             port: 9090
     serviceMonitor:
       main:
-        serviceName: tractive-exporter
+        enabled: true
         endpoints:
           - port: http
-            scheme: http
-            path: /metrics
             interval: 5m
-            scrapeTimeout: 20s
