--- a/apps/dawarich/dawarkitty.yaml
+++ b/apps/dawarich/dawarkitty.yaml
@@ -47,6 +47,7 @@ spec:
     serviceMonitor:
       main:
         enabled: true
+        serviceName: dawarkitty
         endpoints:
           - port: http
             interval: 5m
