--- a/apps/dawarich/dawarkitty.yaml
+++ b/apps/dawarich/dawarkitty.yaml
@@ -50,4 +50,7 @@ spec:
         serviceName: dawarkitty
         endpoints:
           - port: http
+            scheme: http
+            path: /metrics
             interval: 5m
+            scrapeTimeout: 20s
