--- a/automation/home-assistant/backup.yaml
+++ b/automation/home-assistant/backup.yaml
@@ -8,6 +8,8 @@ spec:
   trigger:
     schedule: 0 23 * * *
   restic:
+    moverSecurityContext:
+      fsGroup: 1000
     pruneIntervalDays: 14
     repository: home-assistant-restic-secret
     retain:
