--- a/automation/esphome/esphome.yaml
+++ b/automation/esphome/esphome.yaml
@@ -3,7 +3,7 @@ apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
   name: esphome
-  namespace: applications
+  namespace: automation
 spec:
   interval: 30m
   chart:
@@ -14,7 +14,7 @@ spec:
       sourceRef:
         kind: HelmRepository
         name: bjw-s-charts
-        namespace: applications
+        namespace: automation
   values:
     image:
       repository: esphome/esphome
