--- a/automation/esphome/volume.yaml
+++ b/automation/esphome/volume.yaml
@@ -2,11 +2,11 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: esphome-config
-  namespace: applications
+  namespace: automation
 spec:
   accessModes:
     - ReadWriteOnce
   resources:
     requests:
-      storage: 1Gi
+      storage: 20Gi
   storageClassName: zfs-iscsi
