fix: hass tls secret

--- a/automation/home-assistant/helmrelease.yaml
+++ b/automation/home-assistant/helmrelease.yaml
@@ -57,6 +57,7 @@ spec:
         tls:
           - hosts:
               - *host
+            secretName: hass-tls
     persistence:
       config:
         enabled: true
